infra/kafka/kafka-redpanda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-console
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.smqj.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-console
                port:
                  number: 8080
